# CalcPlusPlus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project-config.config  shell.bat  shell.sh
inc/: fw_base.hpp
rc/: ico.rc
shell/: bison_reflex.bat  bison_reflex.sh  pack-resources.bat  pack-resources.sh
src/: gui_resources.cpp  main.cpp
src/interpreter/: _parser_bison.y  _scaner_reflex.l  action_tree.cpp  action_tree.hpp  interpreter.cpp  interpreter.hpp  location.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
src/main_window/: main_window.cpp  main_window.hpp
ui/: main.htm
ui/css/: main.css
ui/js/: main.js
ui/widgets/: colorizer.js  tabs.css  tabs.js
